--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
             align-items: center;
             text-align: center;
         }
-        .copyright{
-            color: rgb(0, 0, 63);
+        .copyright_footer{    
+            color: rgb(200, 200, 217);
+            line-height: 3;
+            width: 100%;
             text-align: center;
             align-items: center;
         }
@@ -57,6 +59,7 @@
             background-color: rgba(3, 3, 2, 0.5);
             color: white;
             padding: 5px;
+            border-radius: 5px;
         }
         .nav>ul>li>a:hover{
         color: rgb(3, 3, 2, 0.5);
@@ -135,11 +138,11 @@
             </div>
         </section> </p>
     </div>
-
+  
+    <footer class="wrapper">
+        <div class="copyright_footer">Copyright &copy; 2025 web pembelajaran_ayu</div>
+    </footer>
     
-    <footer class="wrapper" style="text-align: center;">Copyright &copy; ayu</footer>
-    
-
     <script>
         const btnLogin = document.getElementById("home");
          btnLogin.addEventListener("click", function(){
